# oscilloscope-go-server

./: README.md  go.mod  job.go  main.go
oscilloscope-go-server/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
oscilloscope-go-server/static/: demo.html  demo.js
oscilloscope-go-server/utils/: convert.go  convert_test.go  http.go  lissajous.go
rust-people-db/: Cargo.toml  README.md
rust-people-db/examples/: people.csv
rust-people-db/src/: cli.rs  constants.rs  gui.rs  main.rs  person.rs
static/: demo.css  demo.html  demo.js
